--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -22,6 +22,7 @@
     "showSidebar": "Показать боковую панель",
     "hideSidebar": "Скрыть боковую панель",
     "devTools": "Инструменты разработчика",
+    "monochromatic": "Монохромный",
     "frostedTexture": "Матовая текстура",
     "xQuit": "Нажмите [X] для выхода",
     "systemTray": "Системный трей",
@@ -69,7 +70,13 @@
     "rename": "Переименовать",
     "user": "Пользователь",
     "setSystemTray": "Установить как системный трей",
-    "clearCache": "Очистить данные кэша"
+    "clearCache": "Очистить данные кэша",
+    "find": {
+      "name": "Найти",
+      "findNext": "Найти далее",
+      "findPrevious": "Найти предыдущее",
+      "jumpToSelection": "Перейти к выбору"
+    }
   },
   "form": {
     "name": "Имя",
@@ -106,6 +113,7 @@
         "name": "Общие",
         "syncBookmarks": "Синхронизировать закладки",
         "globalShortcut": "Глобальные горячие клавиши",
+        "trayShortcut": "Ярлык в системном трее",
         "recording": "Запись...",
         "proxy": "Прокси",
         "proxyRules": "Правила",
